Added second part

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Surnames List</title>
 </head>
 <body>
-    <h1>List of surnames</h1>
+    <h1>List of Surnames</h1>
     <ol id="surname-list">
     </ol>
-    
+    <p>Your surname is at position <strong><span id="position"></span></strong> inside the list!</p>
+
     <!-- JS -->
     <script src="js/script.js"></script>
 </body>
